--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playwright-result-pr-comment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.ts",
   "scripts": {
     "build": "ncc build",
     "playwright": "cd playwright && PLAYWRIGHT_JSON_OUTPUT_NAME=../.github/example-report.json npx playwright test",
@@ -16,6 +16,8 @@
     "@actions/github": "^5.0.3"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0"
+    "@types/node": "^18.0.6",
+    "@vercel/ncc": "^0.34.0",
+    "typescript": "^4.7.4"
   }
 }
