--- a/package.json
+++ b/package.json
@@ -2,22 +2,26 @@
   "name": "playwright-result-pr-comment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "exports": "./index.ts",
+  "type": "module",
   "scripts": {
-    "build": "ncc build",
+    "build": "ncc build -m index.ts",
     "playwright": "cd playwright && PLAYWRIGHT_JSON_OUTPUT_NAME=../.github/example-report.json npx playwright test",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && node ./.dist/test.js",
+    "es": "esbuild --bundle test.ts --format=esm --platform=node --target=node16 --outdir=.dist && node ./.dist/test.js"
   },
   "keywords": [],
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
     "@actions/core": "^1.9.0",
-    "@actions/github": "^5.0.3"
+    "@actions/github": "^5.0.3",
+    "strip-ansi": "^7.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
     "@vercel/ncc": "^0.34.0",
+    "esbuild": "^0.14.50",
     "typescript": "^4.7.4"
   }
 }
