--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
 	"compilerOptions": {
-		"target": "es6",
-		"module": "commonjs",
+		"target": "esnext",
+		"module": "esnext",
+		"moduleResolution": "node",
+		"outDir": ".dist",
 		"lib": [
-			"es6",
+			"es6"
 		],
-		"declaration": true,
+		"esModuleInterop": true,
+		"declaration": false,
 		"strict": true,
-		"noImplicitAny": true,
-		"esModuleInterop": true
+		"exactOptionalPropertyTypes": true,
+		"noImplicitAny": true
 	},
 	"files": [
-		"index.ts"
-	]
+		"index.ts",
+		"test.ts"
+	],
 }
