--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Hello world action step
-        id: hello
+      - name: Run action
         uses: ./
         with:
-          playwright-json-path: './.github/example-report.json'
+          playwright-json-path: './example-result/report.json'
